Fix chopped off search placeholder text on Safari

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -170,7 +170,7 @@ label[for] {
 .navbar-search {
     flex: 1;
     min-width: 0;
-    max-width: 314px;
+    max-width: 324px;
 }
 
 input.dropdown-item {
